<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="6dp">

    <!-- CONTENEDOR PARA EL MENU EDITAR VENTA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_rounded"
        android:padding="20dp">

        <!-- TÍTULO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_venta"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- MONTO TOTAL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_venta_monto_total"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/monto_total">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_venta_monto_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- PAGO TOTAL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_venta_pago_total"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pago_total">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_venta_pago_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- FECHA DE VENTA -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_venta_fecha_venta"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/fecha_venta">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_venta_fecha_venta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- FECHA DE SEGUIMIENTO -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_venta_fecha_seguimiento"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/fecha_seguimiento">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_venta_fecha_seguimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- DESCRIPCIÓN -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_venta_descripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/descripcion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_venta_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- BOTONES CANCELAR Y GUARDAR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancelar_venta"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="Cancelar"
                android:textAllCaps="false"
                android:textColor="@color/text_primary"
                app:cornerRadius="14dp"
                android:layout_marginRight="8dp"
                app:strokeColor="@color/surface_stroke"
                app:strokeWidth="1.5dp"
                app:backgroundTint="@color/surface_primary"  />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guardar_venta"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="Guardar"
                android:textAllCaps="false"
                android:textColor="@color/always_white"
                app:cornerRadius="14dp"
                app:backgroundTint="@color/primary_blue_dark" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>